--- a/layouts/shortcodes/lesson_table.html
+++ b/layouts/shortcodes/lesson_table.html
@@ -18,10 +18,10 @@
 {{ range where $all_lessons "category" "eq" $type }}
 <tr>
     <td>{{ .lessonname }}</td>
-    <td><a href="{{ .site }}"><i class="fas fa-window-maximize"></i></a></td>
-    <td><a href="{{ .repo }}"><i class="fab fa-github"></i></a></td>
-    <td><a href="{{ .ref }}"><i class="fas fa-eye"></i></a></td>
-    <td><a href="{{ .notes }}"><i class="fas fa-plus"></i></a></td>
+    <td style="text-align: center;"><a href="{{ .site }}"><i class="fas fa-window-maximize"></i></a></td>
+    <td style="text-align: center;"><a href="{{ .repo }}"><i class="fab fa-github"></i></a></td>
+    <td style="text-align: center;"><a href="{{ .ref }}"><i class="fas fa-eye"></i></a></td>
+    <td style="text-align: center;"><a href="{{ .notes }}"><i class="fas fa-plus"></i></a></td>
     <td>{{ .status }}</td>
     <td>{{ .maintainers }} </td>
 </tr>
