fix field name in layout

--- a/layouts/shortcodes/lesson_table.html
+++ b/layouts/shortcodes/lesson_table.html
@@ -21,7 +21,7 @@
     <td style="text-align: center;"><a href="{{ .site }}"><i class="fas fa-window-maximize"></i></a></td>
     <td style="text-align: center;"><a href="{{ .repo }}"><i class="fab fa-github"></i></a></td>
     <td style="text-align: center;"><a href="{{ .ref }}"><i class="fas fa-eye"></i></a></td>
-    <td style="text-align: center;"><a href="{{ .notes }}"><i class="fas fa-plus"></i></a></td>
+    <td style="text-align: center;"><a href="{{ .inst_notes }}"><i class="fas fa-plus"></i></a></td>
     <td>{{ .status }}</td>
     <td>{{ .maintainers }} </td>
 </tr>
